tests/NormalTests/paczka1/fuzzy1/17023456.err
Error in line 2: S8 S8 59,8
Error in line 1: CC4NUd S883 77,9
Error in line 6: S8 S8 194,9
Error in line 3: CC4NUd A307 40,8
Error in line 4: T7C95JqcII A307 89,6
Error in line 13: quK A170 44,3
Error in line 9: T7C95JqcII S883 75,9
Error in line 14: quK S883 47,1
Error in line 16: MWJpdQjGITY S8 0,2
Error in line 24: S8 S8 84,1
Error in line 25: S8 A170 82,5
Error in line 8: CC4NUd S883 76,2
Error in line 36: S8 A170 335,8
Error in line 37: S8 S8 80,5
Error in line 35: CC4NUd A170 89,0
